fix webkit-scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,27 +42,22 @@ body {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+
+  scrollbar-width: thin;
+  scrollbar-color: var(--color-green) #1e1e1e;
 }
 
-/* не правильно интепретирует при сборке */
-/* * {
-  scrollbar-width: thin;
-  scrollbar-color: #2d2d30 #1e1e1e;
-
-  &::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background: #454549;
-    border-radius: 4px;
-  }
-
-  &::-webkit-scrollbar-track {
-    background: #1e1e1e;
-  }
-} */
+*::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+*::-webkit-scrollbar-thumb {
+  background: var(--color-green);
+  border-radius: 4px;
+}
+*::-webkit-scrollbar-track {
+  background: #1e1e1e;
+}
 
 a {
   color: inherit;
